# xplorer

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  todo.MD
app/: globals.css  greet.jsx  page.js  styles.module.css
app/client/caching/: LocalStorageRouter.js
app/client/hooks/: copytoClipboard.js
app/client/hooks/darkmode/: DarkModeCookie.js
app/components/: listDrives.jsx  listFiles.jsx
app/components/ui/: Header.jsx
app/components/ui/Theme/: ThemeButton.jsx
app/components/ui/Views/: FolderView.jsx
rust_dev/: Cargo.toml
rust_dev/src/: main.rs
rust_dev/src/directories/: dir_size.rs  mod.rs
rust_dev/src/disk/: formatting.rs  info.rs  list_files.rs  mod.rs
rust_dev/src/disk/utils/: drivepath_helper.rs
rust_dev/src/files/: delete.rs  mod.rs  rename.rs
rust_dev/src/files/formats/: avif.rs  mod.rs
rust_dev/src/files/search/: search_by_name.rs
rust_dev/src/images/: mod.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/directories/: dir_size.rs
src-tauri/src/disk/: bytes_convert.rs  formatting.rs  info.rs  list_files.rs  mod.rs  name.rs
src-tauri/src/disk/utils/: drivepath_helper.rs  mod.rs
src-tauri/src/files/: delete.rs  mod.rs  rename.rs
src-tauri/src/files/formats/: avif.rs
src-tauri/src/files/search/: mod.rs  search_by_name.rs
src-tauri/src/images/: mod.rs  remove_background.rs  resize.rs
src-tauri/src/v2/: list_directory.rs  mod.rs
