[package]
name = "rust_dev"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.117"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.4", features = [] }
sysinfo = "0.30.12"
anyhow = "1.0.86"
image =  "0.25.1"
base64 = "0.22.1"
mp4 = "0.14.0"
chrono = "0.4.31"
env_logger = "0.10.2"
log = "0.4.21"
imageproc = "0.23.0"

