[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde_json = "1.0.117"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.4", features = [] }
sysinfo = "0.30.12"
anyhow = "1.0.86"
image =  "0.25.1"
base64 = "0.22.1"
mp4 = "0.14.0"
chrono = "0.4.31"
env_logger = "0.10.2"
log = "0.4.21"
imageproc = "0.23.0"
io_plus = { version = "0.1.0", git = "https://github.com/floris-xlx/io_plus.git"}
tokio = { version = "1.29.1", features = ["full"] }




[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
